// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coverage 1`] = `
Object {
  "address": "Яндекс Деньги",
  "addressLocation": Object {
    "lat": 60,
    "lon": 37.642584,
    "precision": 1,
  },
  "inUserArea": false,
}
`;

exports[`found full result 1`] = `
Object {
  "address": "Яндекс Деньги",
  "addressLocation": Object {
    "lat": 55.734936,
    "lon": 37.642584,
    "precision": 1,
  },
  "closestSubway": Object {
    "lat": 55.731537026,
    "lon": 37.636331275,
  },
  "inUserArea": true,
  "routes": Array [
    "mt",
    "auto",
  ],
}
`;

exports[`nothing found 1`] = `Object {}`;
